// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player Component renders correctly when not passing players 1`] = `
<div>
  <h2>
    Players
  </h2>
  <input
    onKeyUp={[Function]}
    placeholder="Add player..."
    type="text"
  />
</div>
`;

exports[`Player Component renders correctly when passing players in 1`] = `
<div>
  <h2>
    Players
  </h2>
  <p
    className="player-text"
  >
    John
  </p>
  <p
    className="player-text"
  >
    William
  </p>
  <input
    onKeyUp={[Function]}
    placeholder="Add player..."
    type="text"
  />
</div>
`;
